package model.dungeon.entity;

public abstract class Entity {
    public abstract void draw();
}
