package model.dungeon.entity;

public class Monster extends Entity {
    @Override
    public void draw() {

    }
}
