package model.dungeon.entity.behavior;

import model.dungeon.entity.Entity;
import model.global.GlobalDirection;

public class HeroBehavior implements Behavior {
    @Override
    public GlobalDirection behave(Entity entity) {
        return null;
    }
}
