@startuml

package entity{

    abstract Entity{
        - x : int
        - y : int
        - hp: int
        - direction: GlobalDirection
        + getPosition():(int, int, direction)
        + setPosition(int direction)
        + setPosition(int x, int y)
        + {abstract} draw()
        + behave(): Direction
    }

    class Hero << (S,#FF7700) Singleton >>{
        + draw()
    }

    class Monster{
        + draw()
    }

    interface Behavior{
        + {abstract} behave(Entity entity): Direction
    }

    class Random{
        + behave(Entity entity): Direction
    }

    class HeroBehavior{
        + behave(Entity entity): Direction
    }

}

Hero --|> Entity
Monster --|> Entity
Entity --> "1" Behavior
HeroBehavior ..|> Behavior
Random ..|> Behavior

@enduml